# jieba-wasm

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: demo.yaml  npm-publish.yaml  test.yaml
demo/deno/: jieba-wasm_test.ts
demo/node/: package-lock.json  package.json
demo/node/tests/: index.mjs  node-import.mjs  node-require.js
demo/web/: package-lock.json  package.json  rsbuild.config.ts  tsconfig.json
demo/web/src/: App.tsx  Demo.tsx
scripts/: opt.js
src/: lib.rs
static/css/: index.3501d1ef.css  index.bfb223c7.css
static/js/: index.08b9c0bf.js  index.26ff6eee.js  index.3344c639.js  index.41c7e923.js  index.491e0d70.js  index.525ab44d.js  index.53a873c7.js  index.5a24bb80.js  index.60c83cec.js  index.63695a77.js  index.6cb6e8e0.js  index.ae0e1bc8.js  index.d3f7ef16.js  index.e49c9f2c.js  lib-polyfill.6b949ccb.js  lib-polyfill.96874a5e.js  lib-react.a8c24be5.js
static/wasm/: 033056036108b338.module.wasm  0f9b7ef423680bcd.module.wasm  1662b6e1387bc6df.module.wasm  60eaa03f4abf0b5b.module.wasm  60f1c2db2c2e8f5c.module.wasm  7e603d586b1ce976.module.wasm  9918782ca59ec0b4.module.wasm  e815e32ffa3809fd.module.wasm
