[package]
name = "jieba-rs-wasm"
version = "1.0.0"
authors = ["fengkx <liangkx8237@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.101", features = ["serde-serialize"] }
jieba-rs = { path = "./jieba-rs", features = ["tfidf", "textrank"] }
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
